--- a/bitrix/templates/main-wisetao/assets/css/changes.css
+++ b/bitrix/templates/main-wisetao/assets/css/changes.css
@@ -273,19 +273,20 @@
 
 .review-form-lists {
   overflow: visible;
-  height: 33px;
+  /* height: 33px; */
 }
 
 .review-form-lists-dropdown {
   position: relative;
   display: inline-block;
   width: 100%;
-  height: 33px;
+  height: 100%;
   background-color: #2f3743;
   border-radius: 10px;
   cursor: default;
   overflow: visible;
   z-index: 1;
+  padding: 15px;
 }
 
 .review-form-lists-dropdown-toggle {
@@ -294,16 +295,16 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #2f3743;
+  border: 1px solid #807f81;
+  background: #232428;
   border-radius: 10px;
-
+  padding: 0 15px;
   color: white;
   display: flex;
   align-items: center;
   font-size: 14px;
   margin-right: 5px;
   overflow: visible;
-  padding: 0 0 0 10px;
 }
 
 .review-form-lists-dropdown-toggle::after {
@@ -324,35 +325,35 @@
 
 .review-form-lists-dropdown-list {
   position: absolute;
-  top: 33px;
+  top: 100%;
   right: 0;
   list-style: none;
   margin: 0;
   padding: 0;
-  background-color: #2f3743; /* Изменен цвет */
+  background-color: #232428;
+  border: 1px solid #807f81;
+  border-top: 1px solid transparent;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
   display: none;
-  width: 100%; /* Увеличена ширина */
-  /*z-index: 1;*/
+  width: 100%;
 }
 
 .review-form-lists-dropdown-list.active {
   display: block;
-  height: 200px;
+  height: 160px;
   overflow-y: auto;
 }
 
 .review-form-lists-dropdown-list li {
   color: white;
-  padding-left: 10px;
   display: flex;
   align-items: center;
   gap: 5px;
   cursor: pointer;
   width: 100%; /* Увеличена ширина */
   overflow: visible;
-  padding-bottom: 5px;
+  padding: 5px 15px;
 }
 
 .review-form-lists-values {
