--- a/bitrix/templates/main-wisetao/assets/css/custom.css
+++ b/bitrix/templates/main-wisetao/assets/css/custom.css
@@ -7865,14 +7865,15 @@ html.with-fancybox body.hide-scrollbar {
   display: flex;
   background-color: #f09123;
   padding: 10px 55px;
-  border-radius: 50px;
+  border-radius: 15px;
   color: white;
   font-weight: 600;
   font-size: 17px;
   transition: 300ms ease;
 }
 .btn-primary:hover {
-  background-color: #ba6a0d;
+  background-color: #d2770e;
+  color: black;
 }
 
 .main-btn {
@@ -7880,13 +7881,14 @@ html.with-fancybox body.hide-scrollbar {
   color: white;
   background: #f09123;
   width: 100%;
-  padding: 6px 10px;
+  padding: 10px;
   font-size: 13px;
   margin: 10px 0;
   text-align: center;
+  font-weight: 700;
 }
 .main-btn:hover {
-  color: white;
+  color: black;
   background-color: #d2770e;
 }
 .main-btn._big {
@@ -7986,7 +7988,7 @@ button:focus {
   background: #2f3743;
   color: white;
   width: 100%;
-  padding: 6px 10px;
+  padding: 10px 15px;
   font-size: 14px;
 }
 .main-input::placeholder {
@@ -8084,6 +8086,15 @@ button:focus {
   gap: 50px;
   height: 550px;
 }
+.content-page__title_pages {
+  width: 100%;
+}
+.content-page__title_pages .content-page__title_block {
+  max-width: 100%;
+}
+.content-page__title_pages .content-page__title_text {
+  text-align: center;
+}
 .content-page__title_second .content-page__title_text::after {
   content: "";
   display: block;
@@ -8122,6 +8133,7 @@ button:focus {
   .content-page__title_text {
     width: 100%;
     max-width: 100%;
+    font-size: 40px;
   }
 }
 .content-page__title_block {
@@ -8290,7 +8302,7 @@ button:focus {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 @media screen and (max-width: 992px) {
   .advantages {
@@ -8301,14 +8313,32 @@ button:focus {
 .advantages-card {
   color: #f09123;
   border-radius: 12px;
-  border: 1px solid #f09123;
-  background: #232933;
-  padding: 20px 15px;
+  overflow: hidden;
+  border: 1px solid #ffffff40;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 125px;
+  position: relative;
+}
+.advantages-card__bg {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  top: 0;
+}
+.advantages-card__bg img {
+  height: 100%;
+  object-fit: fill;
+}
+.advantages-card__wrapper {
+  position: relative;
+  z-index: 1;
+  padding: 20px 15px;
 }
 .advantages-card__block {
   text-align: center;
@@ -8362,9 +8392,34 @@ button:focus {
 
 .question-block {
   border-radius: 15px;
-  border: 1px solid white;
-  background: linear-gradient(109deg, #283344 -45.08%, #0b0f15 129.76%);
+  border: 1px solid #ffffff40;
+  overflow: hidden;
+  position: relative;
+}
+
+.question-block__bg {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  top: 0;
+}
+.question-block__bg {
+  height: 100%;
+  object-fit: fill;
+}
+.question-block__block {
+  position: relative;
+  z-index: 1;
   padding: 20px;
+}
+
+.question-block .main-input {
+  border: 1px solid #807f81;
+  padding: 10px 15px;
+  background: #232428;
 }
 @media screen and (max-width: 767px) {
   .question-block__title {
@@ -8518,7 +8573,7 @@ button:focus {
   position: relative;
   padding: 15px;
   border-radius: 12px;
-  border: 1px solid var(--Main-orange, #f09123);
+  border: 1px solid #ffffff40;
   overflow: hidden;
   display: flex;
   height: 125px;
@@ -10495,9 +10550,17 @@ button:focus {
   position: relative;
   text-align: right;
 }
+
+.main-menu__main_link_icon{
+  display: none;
+}
 @media screen and (max-width: 767px) {
   .main-menu__main_link {
     padding: 10px 0;
+  }
+  .main-menu__main_link_icon{
+    display: flex;
+    align-items: center;
   }
 }
 .main-menu__main_link:hover {
@@ -10654,6 +10717,19 @@ button:focus {
   text-align: center;
   line-height: 1.2;
   overflow: hidden;
+}
+.main-menu-item__card::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/menu-bg.png");
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
 }
 .main-menu-item__card:hover,
 .main-menu-item__card:focus,
@@ -11105,18 +11181,43 @@ button:focus {
 .review-ask {
   margin-top: 30px;
   margin-bottom: 30px;
+  position: relative;
+  border: 1px solid rgba(255, 255, 255, 0.4);
   border-radius: 15px;
-  border: 1px solid var(--White, #fff);
-  background: linear-gradient(109deg, #283344 -45.08%, #0b0f15 129.76%);
-  padding: 20px;
+  overflow: hidden;
 }
 @media screen and (max-width: 767px) {
   .review-ask {
-    padding: 15px;
   }
 }
+.review-ask__bg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -1;
+}
+
+.review-ask__bg img {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+.review-ask__block {
+  position: relative;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  padding: 30px;
+}
+.review-ask__block .main-input {
+  border-radius: 10px;
+  border: 1px solid #807f81;
+  background: #232428;
+  padding: 8px 15px;
+}
 .review-ask__title {
-  font-size: 30px;
+  font-size: 35px;
   font-weight: 700;
   margin: 0;
   padding: 0;
@@ -11124,20 +11225,20 @@ button:focus {
   letter-spacing: 2px;
 }
 .review-ask__subtitle {
-  font-size: 20px;
-  margin-top: 15px;
+  font-size: 24px;
+  margin-top: 8px;
 }
 .review-ask__form {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 .review-ask__input {
-  width: 32%;
+  width: 33%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
 }
 @media screen and (max-width: 767px) {
   .review-ask__input {
@@ -11175,6 +11276,13 @@ button:focus {
 
 .blog-page {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.blog-page .group-title {
+  margin-bottom: 40px;
 }
 
 .blog-page__search_form {
@@ -11273,9 +11381,13 @@ button:focus {
 .blog-article {
   position: relative;
   border-radius: 15px;
-  border: 1px solid #f09123;
+  border: 1px solid #ffffff40;
   overflow: hidden;
+  transition: 300ms ease;
   /* Full Width */
+}
+.blog-article:hover {
+  border-color: #f09123;
 }
 .blog-article__wide_link {
   display: flex;
@@ -11732,16 +11844,24 @@ button:focus {
 .location-card {
   width: 100%;
   border-radius: 15px;
-  padding: 20px;
-  border: 1px solid #f09123;
-  background: linear-gradient(
-    107deg,
-    #283344 -44.94%,
-    #181f2a 21.7%,
-    #11171f 117.37%,
-    #0b0f15 164.35%
-  );
+  border: 1px solid rgba(255, 255, 255, 0.4);
   overflow: hidden;
+  position: relative;
+}
+.location-card__bg {
+  display: flex;
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  top: 0;
+}
+.location-card__bg img {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+.location-card__block {
+  padding: 30px;
 }
 .location-card__title {
   font-size: 30px;
@@ -11753,10 +11873,10 @@ button:focus {
   display: inline-block;
   position: absolute;
   top: 50%;
-  right: -70%;
+  right: -75%;
   width: 100%;
   height: 2px;
-  background-color: #f09123;
+  background-color: rgba(255, 255, 255, 0.4);
 }
 .location-card__content {
   font-size: 15px;
@@ -12146,7 +12266,7 @@ button:focus {
 .marketing-service {
   display: flex;
   height: 100%;
-  border: 1px solid #f09123;
+  border: 1px solid #ffffff40;
   border-radius: 15px;
   overflow: hidden;
   background: linear-gradient(130.76deg, #19202c -6.341%, #0b0f15 108.234%);
@@ -12185,14 +12305,27 @@ button:focus {
 }
 .marketing-review-card {
   padding: 15px;
-  border: 1px solid #f09123;
+  border: 1px solid #ffffff40;
   border-radius: 15px;
-  background: linear-gradient(131.87deg, #202937 -4.39%, #10151e 97.766%);
+  /* background: linear-gradient(131.87deg, #202937 -4.39%, #10151e 97.766%); */
   position: relative;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   gap: 12px;
+}
+.marketing-review-card::after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/contacts-bg.png");
+  background-size: cover;
+  background-position: center;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
 }
 .marketing-review-card__category {
   border-radius: 5px 0px 15px 0px;
@@ -12286,6 +12419,10 @@ button:focus {
 .marketing-review-links__item.yandex:hover {
   border-color: #f0b723;
   background-color: #f0b723;
+  color: black;
+}
+.marketing-review-links__item:hover {
+  background-color: #f09123;
   color: black;
 }
 .marketing-bordered-card {
