--- a/bitrix/templates/main-wisetao/assets/css/logistic.css
+++ b/bitrix/templates/main-wisetao/assets/css/logistic.css
@@ -7,10 +7,36 @@
   z-index: 2;
 }
 
+.logistic-page .group-title {
+  margin-bottom: 10px;
+}
+.logistic-page__calc_subtitle {
+  display: flex;
+  color: #f09224;
+  font-size: 19px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
 .logistic-page {
   margin-top: 70px;
   margin-bottom: 0;
   top: 0;
+}
+
+.logistic-main-title {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 1fr 350px;
+  gap: 20px;
+}
+
+.logistic-about .advantages {
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.logistic-about .group-title {
+  display: flex;
 }
 
 .logistic-shipping {
@@ -20,6 +46,111 @@
   right: 50%;
   margin-left: -50vw;
   margin-right: -50vw;
+}
+
+.how-to-use-calc {
+  width: 100%;
+  height: 400px;
+  border-radius: 15px;
+  border: 1px solid #f09123;
+  background-color: black;
+  overflow: hidden;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  position: relative;
+}
+.how-to-use-calc__img {
+  width: 100%;
+}
+.how-to-use-calc__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.how-to-use-calc__icon {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 50px;
+}
+
+.how-to-use-slider__arrows {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.how-to-use-slider .swiper {
+  width: calc(100% + 60px);
+  position: relative;
+  left: -30px;
+}
+
+.how-to-use-slider .swiper-slide {
+  display: flex;
+  width: 70%;
+}
+
+.how-to-use-slider__item {
+  object-fit: cover;
+  height: 200px;
+  border-radius: 10px;
+  border: 1px solid white;
+}
+
+.how-to-use-slider .swiper-button-next,
+.how-to-use-slider .swiper-button-prev {
+  position: static;
+  margin: 0 5px;
+  font-size: 10px;
+  width: 38px;
+  height: 38px;
+  background-color: #2f3743;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.how-to-use-slider .swiper-button-next::after,
+.how-to-use-slider .swiper-button-prev::after {
+  font-size: 16px;
+  color: white;
+}
+
+.how-to-use-slider .swiper-button-next,
+.how-to-use-slider .swiper-rtl .swiper-button-prev {
+  right: -40px;
+}
+
+.how-to-use-slider .swiper-button-prev,
+.how-to-use-slider .swiper-rtl .swiper-button-next {
+  left: -40px;
+}
+
+.how-to-use-slider .swiper-pagination {
+  width: auto;
+  padding: 15px 20px;
+  background-color: #2f3743;
+  border-radius: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: static;
+}
+
+.how-to-use-slider .swiper-pagination-bullet {
+  background-color: #d9d9d9;
+  opacity: 1;
+}
+
+.how-to-use-slider .swiper-pagination-bullet-active {
+  width: 25px;
+  border-radius: 5px;
+}
+
+.how-to-use-slider .swiper-slide {
+  display: flex;
 }
 
 .block-banner {
